--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/kevin.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Kevin Abraham</a></h1>
+        <img src="assets/img/WhatsApp Image 2023-10-11 at 23.10.45_93790bbd.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">AMITH CHANDRAN</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/your-linkedin-profile" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/amith-chandran-09842827b" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/your-github-profile" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
@@ -64,7 +64,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Kevin Abraham</h1>
+      <h1>AMITH CHANDRAN</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -82,7 +82,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/kevin.jpg" class="img-fluid" alt="">
+            <img src="assets/img/WhatsApp Image 2023-10-11 at 23.10.45_93790bbd.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             
@@ -90,8 +90,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 march 2003</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8848583332  </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 23 JUNE 2003</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 9539717382  </li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Thrissur</li>
                 </ul>
               </div>
@@ -99,7 +99,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>B.Tech</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kevinabraham009kvk@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> amithchandran003@gmail.com</li>
                 </ul>
               </div>
             </div>
@@ -180,7 +180,7 @@
             </div>
             <div class="resume-item">
               <h4>School</h4>
-              <p><em>DNHSS,karuvarkundu</em></p>
+              <p><em> GHSS PERIYE</em></p>
             </div>
           </div>
         
@@ -242,13 +242,13 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>kevinabraham009kvk@gmail.com.com</p>
+                <p>amithchandran003@gmail.com.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 8848583332  </p>
+                <p>+91 9539717382  </p>
               </div>
             </div>
 
