--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/amith-chandran-09842827b" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/your-github-profile" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/Amithchandran2003" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>AMITH CHANDRAN</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
