--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a software engineer with experience in building web applications. I am passionate about learning new technologies and solving challenging problems .</p>
+          <p>I am a UI/UX Designer with experience in building web designs. I am passionate about learning new technologies.</p>
         </div>
 
         <div class="row">
@@ -140,7 +140,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">50%</i></span>
+              <span class="skill">FIGMA<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
